--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t yukapooka/frontend -f Dockerfile.dev
+  - docker build -t yukapooka/frontend -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true -t yukapooka/frontend npm run test
