added travis ci yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true -t yukapooka/frontend npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-frontend"
+  env: "DockerFrontend-env"
+  bucket_name: "elasticbeanstalk-us-east-1-048005348004"
+  bucket_path: "docker-frontend"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
